[package]
name = "rocket-mongo-file-center-download-response"
version = "0.7.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-mongo-file-center-download-response"
homepage = "https://magiclen.org/rocket-mongo-file-center-download-response"
keywords = ["rocket", "server", "web", "mongodb", "etag"]
categories = ["web-programming"]
description = "This crate provides a response struct used for client downloading from the File Center on MongoDB."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.1"
url-escape = "0.1"

mongo-file-center = { git = "https://github.com/magiclen/mongo-file-center" }

[dev-dependencies]
validators = "0.23"

[dev-dependencies.validators-derive]
version = "0.23"
default-features = false
features = ["base64_url", "rocket"]