[package]
name = "rocket-mongo-file-center-download-response"
version = "0.7.4"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.67"
repository = "https://github.com/magiclen/rocket-mongo-file-center-download-response"
homepage = "https://magiclen.org/rocket-mongo-file-center-download-response"
keywords = ["rocket", "server", "web", "mongodb", "etag"]
categories = ["web-programming"]
description = "This crate provides a response struct used for client downloading from the File Center on MongoDB."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
tokio-util = { version = "0.7", features = ["io"] }
rocket = "0.5.0-rc.3"

mongo-file-center = "0.6.2"

url-escape = "0.1"

[dev-dependencies]
slash-formatter = "3.1.2"

[dev-dependencies.validators]
version = "0.24"
default-features = false
features = ["derive", "base64_url", "rocket"]
